# HabitFlow-RustProject

./: .gitignore  CHANGE_LOG.md  CODEBASE_KNOWLEDGE.md  Cargo.toml  README.md  build.rs
assets/: app.rc
docs/: prd.md
src/: app_icon.rs  db.rs  export.rs  icons.rs  lucide.rs  main.rs  models.rs  repository.rs  theme.rs
src/components/: add_habit_popup.rs  category_pie_chart.rs  confirm_dialog.rs  factory_reset_dialog.rs  habit_card.rs  habit_input.rs  line_chart.rs  mod.rs  streak_badge.rs
src/views/: archived.rs  mod.rs  settings.rs  sidebar.rs  stats.rs  today.rs  weekly.rs
wix/: main.wxs
